# happylrc

./: .gitignore  CMakeLists.txt  Readme.md  compile.sh  config.xml  dump.rdb  help.sh  how_to_build.md  run_datanode_and_proxy.sh  run_redis.sh
include/: client.h  coordinator.h  datanode.h  erasure_code.h  proxy.h  utils.h
src/: erasure_code.cpp  tinyxml2.cpp  utils.cpp
src/client/: client.cpp  run_client.cpp
src/coordinator/: coordinator.cpp  run_coordinator.cpp
src/datanode/: datanode.cpp  run_datanode.cpp
src/proxy/: proxy.cpp  run_proxy.cpp
